--- a/index.html
+++ b/index.html
@@ -534,6 +534,7 @@
 
     <footer>
       <div class="container">
+        <div>
         <a href="./index.html" class="logo-web-footer"
           >Web<span class="logo-footer">Studio</span></a
         >
@@ -557,8 +558,9 @@
               >
             </li>
           </ul>
-            </div>
         </address>
+        </div>
+
         <div class="footer-icon-block-2">
           <section class="footer-icon-block">
             <h3 class="join-us-h3">DOŁĄCZ DO NAS</h3>
@@ -586,7 +588,7 @@
             </ul>
           </section>
         </div>
-    
+    </div>
     </footer>
   </body>
 </html>
