--- a/index.html
+++ b/index.html
@@ -456,8 +456,7 @@
         <div class="container">
           <h2 class="our-clients-h2">Nasi klienci</h2>
           <ul class="client-icon-block">
-            <li>
-                <div class="client-icon-div">
+            <li class="client-icon-div">
                   <svg
                     class="client-icon"
                     width="41px"
@@ -465,34 +464,26 @@
                   >
                     <use href="./images/icons.svg#icon-logo-0"></use>
                   </svg>
-                </div>
             </li>
-            <li>
-             <div class="client-icon-div">
+            <li class="client-icon-div">
                   <svg
                     class="client-icon"
                     width="40px"
                     height="52px"
                   >
                     <use href="./images/icons.svg#icon-logo-1"></use>
-                  </svg>
-                </div>
-              </a>
+            </svg>
             </li>
-            <li>
-            <div class="client-icon-div">
+            <li class="client-icon-div">
                   <svg
                     class="client-icon"
                     width="43.46px"
                     height="41.18px"
                   >
                     <use href="./images/icons.svg#icon-logo-2"></use>
-                  </svg>
-                </div>
-              </a>
+            </svg>
             </li>
-            <li>
-              <div class="client-icon-div">
+            <li class="client-icon-div">
                   <svg
                     class="client-icon"
                     width="84.44px"
@@ -500,11 +491,8 @@
                   >
                     <use href="./images/icons.svg#icon-logo-3"></use>
                   </svg>
-                </div>
-              </a>
             </li>
-            <li>
-              <div class="client-icon-div">
+            <li class="client-icon-div">
                   <svg
                     class="client-icon"
                     width="62.54px"
@@ -512,11 +500,8 @@
                   >
                     <use href="./images/icons.svg#icon-logo-4"></use>
                   </svg>
-                </div>
-              </a>
             </li>
-            <li>
-             <div class="client-icon-div">
+            <li class="client-icon-div">
                   <svg
                     class="client-icon"
                     width="93.79px"
@@ -524,11 +509,8 @@
                   >
                     <use href="./images/icons.svg#icon-logo-5"></use>
                   </svg>
-                </div>
-              </a>
             </li>
           </ul>
-        </div>
       </section>
     </main>
 
