--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <a class="header-contact" href="tel:+48111111111">
               <svg
               class="header-icon"
-              width="12px"
-              height="10px">
+              width="10px"
+              height="16px">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>+48 111 111 111</a>
              
@@ -458,7 +458,7 @@
           <ul class="client-icon-block">
             <li class="client-icon-div">
                   <svg
-                    class="client-icon"
+                    class="client-icon icon-logo-0"
                     width="41px"
                     height="46.7px"
                   >
@@ -467,7 +467,7 @@
             </li>
             <li class="client-icon-div">
                   <svg
-                    class="client-icon"
+                    class="client-icon icon-logo-1"
                     width="40px"
                     height="52px"
                   >
@@ -476,7 +476,7 @@
             </li>
             <li class="client-icon-div">
                   <svg
-                    class="client-icon"
+                    class="client-icon icon-logo-2"
                     width="43.46px"
                     height="41.18px"
                   >
@@ -485,7 +485,7 @@
             </li>
             <li class="client-icon-div">
                   <svg
-                    class="client-icon"
+                    class="client-icon icon-logo-3"
                     width="84.44px"
                     height="40.62px"
                   >
@@ -494,7 +494,7 @@
             </li>
             <li class="client-icon-div">
                   <svg
-                    class="client-icon"
+                    class="client-icon icon-logo-4"
                     width="62.54px"
                     height="60.04px"
                   >
@@ -503,7 +503,7 @@
             </li>
             <li class="client-icon-div">
                   <svg
-                    class="client-icon"
+                    class="client-icon icon-logo-5"
                     width="93.79px"
                     height="43.93px"
                   >
@@ -515,7 +515,7 @@
     </main>
 
     <footer>
-      <div class="container">
+      <div class="container one-block">
         <div>
         <a href="./index.html" class="logo-web-footer"
           >Web<span class="logo-footer">Studio</span></a
@@ -543,32 +543,30 @@
         </address>
         </div>
 
-        <div class="footer-icon-block-2">
-          <section class="footer-icon-block">
-            <h3 class="join-us-h3">DOŁĄCZ DO NAS</h3>
-            <ul class="footer-social-media">
-              <li class="footer-icon-li">
-                <svg width="44px" height="44px">
+        <div class="block-two">
+            <p class="join-us-h3">DOŁĄCZ DO NAS</p>
+            <ul class="footer-media">
+              <li>
+                <svg class="footer-icon-li" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </li>
-              <li class="footer-icon-li">
-                <svg class="footer-icon" width="44px" height="44px">
+              <li>
+                <svg class="footer-icon-li" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </li>
-              <li class="footer-icon-li">
-                <svg class="footer-icon" width="44px" height="44px">
+              <li>
+                <svg class="footer-icon-li" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </li>
-              <li class="footer-icon-li">
-                <svg class="footer-icon" width="44px" height="44px">
+              <li>
+                <svg class="footer-icon-li" width="44px" height="44px">
                   <use href="./images/icons.svg#icon-linkedIn"></use>
                 </svg>
               </li>
             </ul>
-          </section>
         </div>
     </div>
     </footer>
