git commit "feat: hw-04"

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               class="header-icon" 
               width="16px"
               height="12px">
-                <use href="./images/icons.svg#icon-envelope"></use>
+                <use href="./images/icons.svg#icon-envelope-1"></use>
               </svg>info@devstudio.com</a>
           </li>
           <li class="header-tel-box">
@@ -199,7 +199,7 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
@@ -213,7 +213,7 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-twitter"
+                          href="./images/icons.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
@@ -226,7 +226,7 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-facebook"
+                          href="./images/icons.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
@@ -239,7 +239,7 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-linkedIn"
+                          href="./images/icons.svg#icon-linkedin-1"
                         ></use>
                       </svg>
                     </a>
@@ -456,58 +456,58 @@
         <div class="container">
           <h2 class="our-clients-h2">Nasi klienci</h2>
           <ul class="client-icon-block">
-            <li class="client-icon-div">
+            <li>
                   <svg
-                    class="client-icon icon-logo-0"
-                    width="41px"
-                    height="46.7px"
+                    class="client-icon-div"
+                    width="106px"
+                    height="60px"
                   >
-                    <use href="./images/icons.svg#icon-logo-0"></use>
+                    <use href="./images/icons.svg#icon-Logo-0"></use>
                   </svg>
             </li>
-            <li class="client-icon-div">
+            <li>
                   <svg
-                    class="client-icon icon-logo-1"
-                    width="40px"
-                    height="52px"
+                   class="client-icon-div"
+                    width="106px"
+                    height="60px"
                   >
-                    <use href="./images/icons.svg#icon-logo-1"></use>
+                    <use href="./images/icons.svg#icon-Logo-1"></use>
             </svg>
             </li>
-            <li class="client-icon-div">
+            <li>
                   <svg
-                    class="client-icon icon-logo-2"
-                    width="43.46px"
-                    height="41.18px"
+                    class="client-icon-div"
+                    width="106px"
+                    height="60px"
                   >
-                    <use href="./images/icons.svg#icon-logo-2"></use>
+                    <use href="./images/icons.svg#icon-Logo-2"></use>
             </svg>
             </li>
-            <li class="client-icon-div">
+            <li>
                   <svg
-                    class="client-icon icon-logo-3"
-                    width="84.44px"
-                    height="40.62px"
+                    class="client-icon-div"
+                    width="106px"
+                    height="60px"
                   >
-                    <use href="./images/icons.svg#icon-logo-3"></use>
+                    <use href="./images/icons.svg#icon-Logo-3"></use>
                   </svg>
             </li>
-            <li class="client-icon-div">
+            <li>
                   <svg
-                    class="client-icon icon-logo-4"
-                    width="62.54px"
-                    height="60.04px"
+                    class="client-icon-div"
+                    width="106px"
+                    height="60px"
                   >
-                    <use href="./images/icons.svg#icon-logo-4"></use>
+                    <use href="./images/icons.svg#icon-Logo-4"></use>
                   </svg>
             </li>
-            <li class="client-icon-div">
+            <li>
                   <svg
-                    class="client-icon icon-logo-5"
-                    width="93.79px"
-                    height="43.93px"
+                   class="client-icon-div"
+                    width="106px"
+                    height="60px"
                   >
-                    <use href="./images/icons.svg#icon-logo-5"></use>
+                    <use href="./images/icons.svg#icon-Logo-5"></use>
                   </svg>
             </li>
           </ul>
@@ -548,22 +548,22 @@
             <ul class="footer-media">
               <li>
                 <svg class="footer-icon-li" width="44px" height="44px">
-                  <use href="./images/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </li>
               <li>
                 <svg class="footer-icon-li" width="44px" height="44px">
-                  <use href="./images/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </li>
               <li>
                 <svg class="footer-icon-li" width="44px" height="44px">
-                  <use href="./images/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </li>
               <li>
                 <svg class="footer-icon-li" width="44px" height="44px">
-                  <use href="./images/icons.svg#icon-linkedIn"></use>
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </li>
             </ul>
