--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
              class="header-icon" 
               width="16px"
               height="12px">
-              <use href="./images/icons.svg#icon-envelope"></use>
+              <use href="./images/icons.svg#icon-envelope-1"></use>
             </svg>info@devstudio.com</a>
           </li>
           <li class="header-tel-box">
@@ -203,7 +203,8 @@
     </main>
 
     <footer>
-      <div class="container">
+      <div class="container one-block">
+        <div>
         <a href="./index.html" class="logo-web-footer"
           >Web<span class="logo-footer">Studio</span></a
         >
@@ -228,7 +229,34 @@
             </li>
           </ul>
         </address>
-      </div>
+        </div>
+
+   <div class="block-two">
+            <p class="join-us-h3">DOŁĄCZ DO NAS</p>
+            <ul class="footer-media">
+              <li>
+                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </li>
+            </ul>
+        </div>
+        </div>
     </footer>
   </body>
 </html>
