--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
           <ul class="client-icon-block">
             <li>
                   <svg
-                    class="client-icon-div"
+                    class="client-icon-div client-icon"
                     width="106px"
                     height="60px"
                   >
@@ -467,7 +467,7 @@
             </li>
             <li>
                   <svg
-                   class="client-icon-div"
+                   class="client-icon-div client-icon"
                     width="106px"
                     height="60px"
                   >
@@ -476,7 +476,7 @@
             </li>
             <li>
                   <svg
-                    class="client-icon-div"
+                    class="client-icon-div client-icon"
                     width="106px"
                     height="60px"
                   >
@@ -485,7 +485,7 @@
             </li>
             <li>
                   <svg
-                    class="client-icon-div"
+                    class="client-icon-div client-icon"
                     width="106px"
                     height="60px"
                   >
@@ -494,7 +494,7 @@
             </li>
             <li>
                   <svg
-                    class="client-icon-div"
+                    class="client-icon-div client-icon"
                     width="106px"
                     height="60px"
                   >
@@ -503,7 +503,7 @@
             </li>
             <li>
                   <svg
-                   class="client-icon-div"
+                   class="client-icon-div client-icon"
                     width="106px"
                     height="60px"
                   >
@@ -547,22 +547,22 @@
             <p class="join-us-h3">DOŁĄCZ DO NAS</p>
             <ul class="footer-media">
               <li>
-                <svg class="footer-icon-li" width="20px" height="20px">
+                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </li>
               <li>
-                <svg class="footer-icon-li" width="20px" height="20px">
+                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </li>
               <li>
-                <svg class="footer-icon-li" width="20px" height="20px">
+                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </li>
               <li>
-                <svg class="footer-icon-li" width="20px" height="20px">
+                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </li>
