--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
@@ -280,7 +280,7 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-twitter"
+                          href="./images/icons.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
@@ -293,7 +293,7 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-facebook"
+                          href="./images/icons.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
@@ -306,7 +306,7 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-linkedIn"
+                          href="./images/icons.svg#icon-linkedin-1"
                         ></use>
                       </svg>
                     </a>
@@ -335,7 +335,7 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
@@ -348,7 +348,7 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-twitter"
+                          href="./images/icons.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
@@ -361,7 +361,7 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-facebook"
+                          href="./images/icons.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
@@ -374,7 +374,7 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-linkedIn"
+                          href="./images/icons.svg#icon-linkedin-1"
                         ></use>
                       </svg>
                     </a>
@@ -403,7 +403,7 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
@@ -416,7 +416,7 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-twitter"
+                          href="./images/icons.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
@@ -429,7 +429,7 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-facebook"
+                          href="./images/icons.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
@@ -442,11 +442,11 @@
                         height="20px"
                       >
                         <use
-                          href="./images/icons.svg#icon-linkedIn"
+                          href="./images/icons.svg#icon-linkedin-1"
                         ></use>
                       </svg>
-                    </div>
                   </a>
+                </div>
                 </li>
               </ul>
               </div>
@@ -457,58 +457,70 @@
           <h2 class="our-clients-h2">Nasi klienci</h2>
           <ul class="client-icon-block">
             <li>
+              <a href="#" class="client-icon-div">
                   <svg
-                    class="client-icon-div client-icon"
+                    class="client-icon"
                     width="106px"
                     height="60px"
                   >
                     <use href="./images/icons.svg#icon-Logo-0"></use>
                   </svg>
+                  </a>
             </li>
             <li>
+              <a href="#" class="client-icon-div">
                   <svg
-                   class="client-icon-div client-icon"
+                   class="client-icon"
                     width="106px"
                     height="60px"
                   >
                     <use href="./images/icons.svg#icon-Logo-1"></use>
             </svg>
+            </a>
             </li>
             <li>
+              <a href="#" class="client-icon-div">
                   <svg
-                    class="client-icon-div client-icon"
+                    class="client-icon"
                     width="106px"
                     height="60px"
                   >
                     <use href="./images/icons.svg#icon-Logo-2"></use>
             </svg>
+            </a>
             </li>
             <li>
+              <a href="#" class="client-icon-div">
                   <svg
-                    class="client-icon-div client-icon"
+                    class="client-icon"
                     width="106px"
                     height="60px"
                   >
                     <use href="./images/icons.svg#icon-Logo-3"></use>
                   </svg>
+                  </a>
             </li>
             <li>
+              <a href="#" class="client-icon-div">
                   <svg
-                    class="client-icon-div client-icon"
+                    class="client-icon"
                     width="106px"
                     height="60px"
                   >
                     <use href="./images/icons.svg#icon-Logo-4"></use>
                   </svg>
+                  </a>
             </li>
             <li>
+              <a href="#" class="client-icon-div">
                   <svg
-                   class="client-icon-div client-icon"
+                   class="client-icon"
                     width="106px"
                     height="60px"
                   >
                     <use href="./images/icons.svg#icon-Logo-5"></use>
                   </svg>
+                  </a>
             </li>
           </ul>
       </section>
@@ -547,24 +559,44 @@
             <p class="join-us-h3">DOŁĄCZ DO NAS</p>
             <ul class="footer-media">
               <li>
-                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
+                <a href="#" class="footer-icon-li">
+                <svg
+                class="footer-icon"
+                width="20px"
+                height="20px">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
+                </a>
               </li>
               <li>
-                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
+                <a href="#" class="footer-icon-li">
+                <svg
+                class="footer-icon"
+                width="20px"
+                height="20px">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
+                </a>
               </li>
               <li>
-                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
+                <a href="#" class="footer-icon-li">
+                <svg
+                class="footer-icon"
+                width="20px"
+                height="20px">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
+                </a>
               </li>
               <li>
-                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
+                <a href="#" class="footer-icon-li">
+                <svg
+                class="footer-icon"
+                width="20px"
+                height="20px">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
+                </a>
               </li>
             </ul>
         </div>
