--- a/portfolio.html
+++ b/portfolio.html
@@ -88,6 +88,7 @@
 
           <ul class="block">
             <li class="portfolio-frame">
+              <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio1.jpg"
                 alt="laptop"
@@ -98,8 +99,10 @@
                 <h3 class="h3-portfolio">Technocrack</h3>
                 <p class="paragraph-portfolio">Strona internetowa</p>
               </div>
+              </a>
             </li>
             <li class="portfolio-frame">
+              <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio2.jpg"
                 alt="basketball players"
@@ -110,8 +113,10 @@
                 <h3 class="h3-portfolio">Grafika New Orlean vs Golden Star</h3>
                 <p class="paragraph-portfolio">Dizajn</p>
               </div>
+              </a>
             </li>
             <li class="portfolio-frame">
+              <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio3.jpg"
                 alt="logo of seafood restaurant"
@@ -122,9 +127,11 @@
                 <h3 class="h3-portfolio">Restauracja Seafood</h3>
                 <p class="paragraph-portfolio">Aplikacja</p>
               </div>
+              </a>
             </li>
 
             <li class="portfolio-frame">
+              <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio4.jpg"
                 alt="headphones"
@@ -135,8 +142,10 @@
                 <h3 class="h3-portfolio">Projekt Prime</h3>
                 <p class="paragraph-portfolio">Marketing</p>
               </div>
+              </a>
             </li>
             <li class="portfolio-frame">
+              <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio5.jpg"
                 alt="boxes"
@@ -147,8 +156,10 @@
                 <h3 class="h3-portfolio">Projekt Boxes</h3>
                 <p class="paragraph-portfolio">Aplikacja</p>
               </div>
+              </a>
             </li>
             <li class="portfolio-frame">
+              <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio6.jpg"
                 alt="monitor"
@@ -159,10 +170,12 @@
                 <h3 class="h3-portfolio">Inspiration has no Borders</h3>
                 <p class="paragraph-portfolio">Strona internetowa</p>
               </div>
+              </a>
             </li>
 
             <li class="portfolio-frame">
-              <img
+              <a href="" class="portfolio-link">
+                <img
                 src="./images/portfolio7.jpg"
                 alt="magazine"
                 width="370"
@@ -172,8 +185,10 @@
                 <h3 class="h3-portfolio">Magazyn Limited Edition</h3>
                 <p class="paragraph-portfolio">Dizajn</p>
               </div>
+              </a>
             </li>
             <li class="portfolio-frame">
+              <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio8.jpg"
                 alt="label tag"
@@ -184,8 +199,10 @@
                 <h3 class="h3-portfolio">Projekt LAB</h3>
                 <p class="paragraph-portfolio">Marketing</p>
               </div>
+              </a>
             </li>
             <li class="portfolio-frame">
+              <a href="" class="portfolio-link">
               <img
                 src="./images/portfolio9.jpg"
                 alt="typing on laptop keyboard"
@@ -196,6 +213,7 @@
                 <h3 class="h3-portfolio">Growing Business</h3>
                 <p class="paragraph-portfolio">Aplikacja</p>
               </div>
+              </a>
             </li>
           </ul>
         </section>
@@ -235,24 +253,44 @@
             <p class="join-us-h3">DOŁĄCZ DO NAS</p>
             <ul class="footer-media">
               <li>
-                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
+                <a href="#" class="footer-icon-li">
+                <svg
+                class="footer-icon"
+                width="20px"
+                height="20px">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
+                </a>
               </li>
               <li>
-                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
+                <a href="#" class="footer-icon-li">
+                <svg
+                class="footer-icon"
+                width="20px"
+                height="20px">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
+                </a>
               </li>
               <li>
-                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
+                <a href="#" class="footer-icon-li">
+                <svg
+                class="footer-icon"
+                width="20px"
+                height="20px">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
+                </a>
               </li>
               <li>
-                <svg class="footer-icon-li footer-icon" width="20px" height="20px">
+                <a href="#" class="footer-icon-li">
+                <svg
+                class="footer-icon"
+                width="20px"
+                height="20px">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
+                </a>
               </li>
             </ul>
         </div>
